# tm-parser

./: .gitignore  .gitmodules  README.md  meson.build
editor/: Makefile  README.md  commands.cpp  commands.h  dracula-soft.json  dracula.json  editor.cpp  editor.h  editor.pro  engine.cpp  engine.h  extension.cpp  extension.h  gutter.cpp  gutter.h  highlighter.cpp  highlighter.h  highlighter_.cpp  highlighter_.h  icons.cpp  icons.h  index.html  index.js  js.cpp  js.h  keybinding.json  light_plus.json  main.cpp  mainwindow.cpp  mainwindow.h  minimap.cpp  minimap.h  package.json  panel.cpp  panel.h  settings.cpp  settings.h  shades-of-purple-color-theme-italic.json  shades-of-purple-color-theme.json  sidebar.cpp  (+7 more)
editor/app/: extensions.js  keybinding.js  search.js
editor/data/: keybinding.json  settings.json
editor/js/: events.js  init.js  keybinding.js  search.js  ui.js
editor/js_/: ui.js
parser/: defines.h  grammar.cpp  grammar.h  main.cpp  meson.build  parse.cpp  parse.h  pattern.cpp  pattern.h  private.h  reader.cpp  reader.h  scope.cpp  scope.h
scopes/: main.cpp  match.cpp  meson.build  parse.cpp  parse.h  scope.cpp  scope.h  types.cpp  types.h
tests/: main.cpp  meson.build
tests/cases/: test.c  tinywl.c
textmate/: meson.build  textmate.cpp  textmate.h
textmate/extensions/: meson.build  util.cpp
textmate/parser/: defines.h  grammar.cpp  meson.build  parse.cpp  pattern.h  private.h  reader.cpp
textmate/scopes/: meson.build  parse.h  types.h
textmate/theme/: colors.h  meson.build  rgb.h  theme.cpp  theme.h
theme/: main.cpp  meson.build  theme.cpp  theme.h  util.cpp  util.h
